<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/info_screen"
        android:icon="@drawable/ic_info"
        android:title="Info"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings_screen"
        android:icon="@drawable/ic_settings"
        android:title="Settings"
        app:showAsAction="always" />

</menu>